--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -3,6 +3,19 @@
   height: 100vh;
   width: 100vw;
   background-color: rgb(66, 63, 62);
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+}
+
+.synth-component-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.keyboard-component-container {
   display: flex;
   justify-content: center;
   align-items: center;
