--- a/my-app/src/Components/SynthLayout/SynthLayout.css
+++ b/my-app/src/Components/SynthLayout/SynthLayout.css
@@ -1,3 +1,16 @@
+.layout-body {
+  display: grid;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgb(66, 63, 62);
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  align-content: center;
+}
+
 .synth-container {
   width: 50vw;
   height: 30vh;
