--- a/my-app/src/Components/SynthLayout/SynthLayout.css
+++ b/my-app/src/Components/SynthLayout/SynthLayout.css
@@ -2,7 +2,9 @@
   display: grid;
   height: 100vh;
   width: 100vw;
-  background-color: rgb(66, 63, 62);
+  background-image: url(../../assets/gradient-bg.jpg);
+  background-position: center;
+  background-size: cover;
   display: grid;
   grid-template-rows: 1fr 1fr;
   justify-content: center;
@@ -14,7 +16,7 @@
 .synth-container {
   width: 50vw;
   height: 30vh;
-  background-color: black;
+  background-color: rgb(203, 228, 222);
   color: white;
   display: grid;
   grid-template-rows: 1fr 1fr;
@@ -28,6 +30,7 @@ button {
   border: none;
   height: 6vh;
   display: flex;
+  font-family: "Rajdhani", sans-serif;
   justify-content: center;
   align-items: center;
   border: 2px solid white;
