--- a/my-app/src/Components/SynthLayout/SynthLayout.css
+++ b/my-app/src/Components/SynthLayout/SynthLayout.css
@@ -22,24 +22,9 @@
   grid-template-rows: 1fr 1fr;
   justify-content: center;
   border-radius: 10px;
-}
-
-button {
-  font-size: 3vh;
-  padding: 1vh;
-  border: none;
-  height: 6vh;
-  display: flex;
-  font-family: "Rajdhani", sans-serif;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid white;
-  border-radius: 4px;
-  width: 7vw;
-  background-color: #4caf50;
-  color: white;
-  cursor: pointer;
-  transition: background-color 0.2s ease-in-out;
+  box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.7);
+  -webkit-box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.7);
+  -moz-box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.7);
 }
 
 .button-container {
