--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -2,3 +2,14 @@
   text-align: center;
   font-family: "Rajdhani", sans-serif;
 }
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+.synth-component {
+  width: 100vh;
+  height: 100vw;
+}
