--- a/my-app/src/Components/SynthLayout/SynthLayout.css
+++ b/my-app/src/Components/SynthLayout/SynthLayout.css
@@ -1,12 +1,14 @@
 .layout-body {
   display: grid;
+  min-width: 100%;
   height: 100vh;
   width: 100vw;
   background-image: url(../../assets/gradient-bg.jpg);
   background-position: center;
   background-size: cover;
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 3.5fr 2fr;
+  grid-template-columns: 1fr;
   justify-content: center;
   align-items: center;
   justify-items: center;
@@ -14,17 +16,72 @@
 }
 
 .synth-container {
-  width: 50vw;
-  height: 30vh;
+  width: 70vw;
+  height: 60vh;
   background-color: rgb(203, 228, 222);
-  color: white;
+  border: 2px solid;
+  color: black;
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 8fr;
+  /* grid-template-columns: 1fr 1fr 1fr; */
+  grid-template-columns: 1fr;
   justify-content: center;
-  border-radius: 10px;
+  align-items: center;
+  border-radius: 6px;
   box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.7);
   -webkit-box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.7);
   -moz-box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.7);
+}
+
+.module-titles {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  font-size: 4vh;
+  text-shadow: 1px 1px 1px black;
+}
+
+.module-controls {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.osc-controls {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.osc-pitch-controls {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.osc-container {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  margin-right: 5vw;
+}
+
+.pitch-arrow {
+  height: 4vh;
 }
 
 .button-container {
@@ -41,4 +98,14 @@
 
 button:hover {
   background-color: #3e8e41;
+}
+
+.wave-icon {
+  height: 3vh;
+  margin: 0.5vw;
+  cursor: pointer;
+}
+
+.wave-icon:hover {
+  transform: scale(1.2);
 }
