can adjust gain values but is buggy. also splits up oscillator components into separate components

--- a/my-app/src/Components/Osc/Osc.css
+++ b/my-app/src/Components/Osc/Osc.css
@@ -12,6 +12,10 @@
   text-shadow: 0.75px 0.75px 0.75px black;
 }
 
+.my-knob path.knob-circle {
+  fill: white !important;
+}
+
 .pitch-controls {
   display: flex;
   height: 100%;
