--- a/my-app/src/Components/Osc/Osc2.css
+++ b/my-app/src/Components/Osc/Osc2.css
@@ -1,4 +1,4 @@
-.osc-component {
+.osc-component2 {
   width: 100%;
   height: 100%;
   display: grid;
@@ -6,6 +6,8 @@
   grid-template-rows: 1fr;
   height: 100%;
   flex-direction: column;
+  border-bottom: 2px solid black;
+  background-color: rgb(234, 234, 204);
   justify-content: center;
   align-items: center;
   font-size: 3vh;
