attack working onclick

--- a/my-app/src/Components/Synth/Synth.css
+++ b/my-app/src/Components/Synth/Synth.css
@@ -23,7 +23,6 @@
   color: black;
   display: grid;
   grid-template-rows: 1fr 8fr;
-  /* grid-template-columns: 1fr 1fr 1fr; */
   grid-template-columns: 1fr;
   justify-content: center;
   align-items: center;
@@ -71,7 +70,7 @@
 
 .oscillators {
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr;
   height: 100%;
 }
 
