--- a/my-app/src/Components/ADSR/ADSR.css
+++ b/my-app/src/Components/ADSR/ADSR.css
@@ -4,7 +4,7 @@
   height: 100%;
   align-items: center;
   border-right: 2px solid black;
-  border-bottom: 1.5px solid black;
+  border: 1px solid black;
   font-size: 3vh;
   background-color: rgb(137, 203, 188);
   box-shadow: -1px 0px 5px 0px rgba(0, 0, 0, 0.75);
