--- a/my-app/src/Components/Osc/Osc1.css
+++ b/my-app/src/Components/Osc/Osc1.css
@@ -1,13 +1,12 @@
 .osc-component1 {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr;
-  height: 100%;
+  grid-template-rows: 1fr 3fr;
   flex-direction: column;
   background-color: rgb(174, 207, 199);
-  border-bottom: 2px solid black;
+  border: 1px solid black;
+
   justify-content: center;
   align-items: center;
   font-size: 3vh;
@@ -15,6 +14,12 @@
   box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.85);
   -webkit-box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.85);
   -moz-box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.85);
+}
+
+.oscillator-controls {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  align-items: center;
 }
 
 .my-knob path.knob-circle {
@@ -55,7 +60,7 @@
 }
 
 .wave-icon {
-  height: 3vh;
+  height: 2.5vh;
   margin: 0.5vw;
   cursor: pointer;
 }
