--- a/my-app/src/Components/FX/Delay/Delay.css
+++ b/my-app/src/Components/FX/Delay/Delay.css
@@ -14,7 +14,8 @@
 
 .delay-title {
   color: black;
-  font-size: 3vh;
+  font-size: 4vh;
+  font-family: "Wallpoet", cursive;
 }
 
 .delay-controls {
