--- a/my-app/src/Components/Filter/Filter.css
+++ b/my-app/src/Components/Filter/Filter.css
@@ -1,9 +1,9 @@
 .filter-container {
   display: grid;
-  grid-template-rows: 2fr 5fr;
+  grid-template-rows: 1.4fr 1fr 5fr;
   height: 100%;
   align-items: center;
-  background-color: ivory;
+  background-color: rgb(25, 167, 206);
   border: 1px solid black;
 
   font-size: 3vh;
@@ -21,7 +21,23 @@
   align-items: center;
 }
 
+.filter-label {
+  background-color: black;
+  color: white;
+  height: 100%;
+  border: 2px solid white;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .select-container {
   display: flex;
   flex-direction: column;
+}
+
+.cutoff-label,
+.q-label {
+  font-size: 2.5vh;
 }
