--- a/my-app/src/Components/LFO/LFO.css
+++ b/my-app/src/Components/LFO/LFO.css
@@ -1,11 +1,10 @@
 .lfo-container {
   display: grid;
-  grid-template-rows: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 3fr;
   height: 100%;
   align-items: center;
-  background-color: ivory;
   border: 1px solid black;
-
+  background-color: rgb(20, 108, 148);
   font-size: 3vh;
   text-shadow: 0.75px 0.75px 0.75px black;
   box-shadow: -1px 0px 5px 0px rgba(0, 0, 0, 0.75);
@@ -21,9 +20,25 @@
   align-items: center;
 }
 
+.lfo-label {
+  background-color: black;
+  color: white;
+  height: 100%;
+  border: 2px solid white;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .wave-select-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.depth-label,
+.rate-label {
+  font-size: 2.5vh;
 }
