--- a/my-app/src/Components/Master/Master.css
+++ b/my-app/src/Components/Master/Master.css
@@ -4,6 +4,7 @@
   height: 100%;
   align-items: center;
   border: 1px solid black;
+  background-color: rgb(44, 44, 44);
   font-size: 3vh;
   box-shadow: -1px 0px 5px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: -1px 0px 5px 0px rgba(0, 0, 0, 0.75);
@@ -11,4 +12,9 @@
   text-shadow: 0.75px 0.75px 0.75px black;
   justify-content: space-evenly;
   text-shadow: 0.75px 0.75px 0.75px black;
+}
+
+.master-title {
+  font-family: "Geostar Fill", cursive;
+  color: white;
 }
