--- a/my-app/src/Components/Osc/Osc1.css
+++ b/my-app/src/Components/Osc/Osc1.css
@@ -1,12 +1,11 @@
 .osc-component1 {
-  /* width: 100%;
-  height: 100%; */
   display: grid;
-  grid-template-rows: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 3fr;
+  grid-template-columns: 1fr;
   flex-direction: column;
   background-color: rgb(174, 207, 199);
   border: 1px solid black;
-
+  width: 100%;
   justify-content: center;
   align-items: center;
   font-size: 3vh;
@@ -18,8 +17,10 @@
 
 .oscillator-controls {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
   align-items: center;
+  justify-content: space-evenly;
 }
 
 .my-knob path.knob-circle {
@@ -28,14 +29,6 @@
 
 .p-knob-text {
   color: white;
-}
-
-.pitch-controls {
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  margin-left: 1vh;
 }
 
 .osc-container {
@@ -47,20 +40,38 @@
   margin-right: 4vw;
 }
 
-.pitch-arrow {
-  height: 4vh;
-  margin-left: 1vw;
-  margin-right: 1vw;
-  cursor: pointer;
-}
-
 .semitones {
   margin-left: 1vw;
   margin-right: 1vw;
 }
 
 .wave-icon {
-  height: 2.5vh;
+  height: 3vh;
   margin: 0.5vw;
   cursor: pointer;
+}
+
+.detune-container {
+  display: flex;
+  margin-right: 2vw;
+}
+.gain-container {
+  margin-left: 2vw;
+}
+
+.detune-label,
+.gain-label {
+  font-size: 2.5vh;
+}
+
+.osc-label {
+  background-color: black;
+  color: white;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid white;
+  border-radius: 6px;
+  width: 100%;
 }
