--- a/my-app/src/Components/ADSR/ADSR.css
+++ b/my-app/src/Components/ADSR/ADSR.css
@@ -6,6 +6,8 @@
   border-right: 2px solid black;
   border: 1px solid black;
   font-size: 3vh;
+  border-radius: 6px;
+
   background-color: rgb(137, 203, 188);
   box-shadow: -1px 0px 5px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: -1px 0px 5px 0px rgba(0, 0, 0, 0.75);
