--- a/my-app/src/Components/FX/WaveShaper/Waveshaper.css
+++ b/my-app/src/Components/FX/WaveShaper/Waveshaper.css
@@ -8,6 +8,7 @@
   flex-direction: column;
   border: 1px solid black;
   height: 100%;
+  border-radius: 6px;
   background-color: rgb(55, 59, 133);
   -webkit-box-shadow: -1px 0px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -1px 0px 5px 0px rgba(0, 0, 0, 0.75);
@@ -32,4 +33,5 @@
   color: white;
   font-size: 4vh;
   font-family: "Rubik Iso", cursive;
+  text-shadow: 2px 2px 2px black;
 }
