--- a/my-app/src/Components/LFO/LFO.css
+++ b/my-app/src/Components/LFO/LFO.css
@@ -6,6 +6,8 @@
   border: 1px solid black;
   background-color: rgb(20, 108, 148);
   font-size: 3vh;
+  border-radius: 6px;
+
   text-shadow: 0.75px 0.75px 0.75px black;
   box-shadow: -1px 0px 5px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: -1px 0px 5px 0px rgba(0, 0, 0, 0.75);
