--- a/my-app/src/Components/Master/Master.css
+++ b/my-app/src/Components/Master/Master.css
@@ -4,8 +4,9 @@
   height: 100%;
   align-items: center;
   border: 1px solid black;
-  background-color: rgb(44, 44, 44);
+  background-color: rgb(5, 64, 14);
   font-size: 3vh;
+  border-radius: 6px;
   box-shadow: -1px 0px 5px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: -1px 0px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -1px 0px 5px 0px rgba(0, 0, 0, 0.75);
@@ -16,5 +17,6 @@
 
 .master-title {
   font-family: "Geostar Fill", cursive;
-  color: white;
+  color: rgb(218, 233, 229);
+  text-shadow: 2px 2px 2px black;
 }
