--- a/my-app/src/Components/Osc/Osc1.css
+++ b/my-app/src/Components/Osc/Osc1.css
@@ -9,6 +9,8 @@
   justify-content: center;
   align-items: center;
   font-size: 3vh;
+  border-radius: 6px;
+
   text-shadow: 0.75px 0.75px 0.75px black;
   box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.85);
   -webkit-box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.85);
